--- a/modules/ROOT/pages/principles/docs-as-code.adoc
+++ b/modules/ROOT/pages/principles/docs-as-code.adoc
@@ -1,5 +1,5 @@
 = Docs-as-code
-
+// Preamble
 include::partial$/docs-as-code-preamble.adoc[]
 
 image:docs-as-code.jpeg[decorative image of Docs as Code process]
@@ -9,73 +9,69 @@ image:docs-as-code.jpeg[decorative image of Docs as Code process]
 Whether working alone or on a team, proper version control is a must.
 
 === Feature branch workflow
+// Various branching workflows with diagrams
 include::partial$/version-control/git-feature-branch-workflow.adoc[]
 
 === Feature branch naming conventions
+// Preferred naming conventions
 include::partial$/version-control/git-feature-branch-naming-convention-rationale.adoc[]
 
+// Git branch names example
 include::example$/git/feature-branch-naming-convention-example.bash[]
 
 === Pull requests
-
 Before merging, I like to xref:#_testability[test] and xref:#_peer_review[peer review] my docs as part of a Pull Request. If possible, I'll deploy a [branch]`feature` or [branch]`dev` branch to a staging environment and share with internal shareholders before the release.
 
 == Content reuse
-// content reuse rationale
+// Content reuse rationale
 include::partial$/content-reuse/content-reuse-rationale.adoc[]
 
 === Examples depending on software
-// content reuse examples - TODO: break this down by software with example$
+// Content reuse examples - TODO: break this down by software with example$
 include::partial$/content-reuse/content-reuse-examples-with-different-software.adoc[]
 
-// topic typing rationale
 == Topic typing
+// Topic typing rationale
 include::partial$/content-reuse/topic-typing-rationale.adoc[]
 
-// topic typing example
+// Topic typing example
 include::example$/docs-as-code/topic-typing-feature-xyz.adoc[]
 
-// note: not everything must be modular
+// Note: not everything must be modular
 include::partial$/content-reuse/content-reuse-determination-note.adoc[]
 
 == Reviews
-// reviews rationale
+// Reviews rationale
 include::partial$/reviews/reviews-rationale.adoc[]
 
 === SME review
-
 // SME review rationale
 include::partial$/reviews/sme-review-rationale.adoc[]
 
 === Peer review
-
-// peer review rationale
+// Peer review rationale
 include::partial$/reviews/peer-review-rationale.adoc[]
 
 === Feature review
-
-// feature review rationale
+// Feature review rationale
 include::partial$/reviews/feature-review-rationale.adoc[]
 
 == Testability
-
-// testing rationale
+// Testing rationale
 include::partial$/testing/testability-rationale.adoc[]
 
 === Linters
-
-// testing with linters
+// Testing with linters
 include::partial$/testing/linters-rationale.adoc[]
 
-// personal vale config link
+// Personal Vale config link
 include::partial$/personal-vale-config-link.adoc[]
 
 === Acceptance criteria
-
-// testing against acceptance criteria
+// Testing against acceptance criteria
 include::partial$/testing/acceptance-criteria-rationale.adoc[]
 
-// acceptance criteria examples
+// Acceptance criteria examples
 Here's a couple of examples to show what I mean:
 
 include::example$acceptance-criteria/bad-ac.adoc[]
@@ -83,6 +79,5 @@ include::example$acceptance-criteria/good-ac.adoc[]
 include::partial$acceptance-criteria/note-about-ac.adoc[]
 
 === Reviews
-
-// testing through reviews
+// Testing through reviews
 include::partial$/testing/reviews-as-testing.adoc[]
