--- a/modules/ROOT/pages/writing-samples/asciidoc.adoc
+++ b/modules/ROOT/pages/writing-samples/asciidoc.adoc
@@ -1,26 +1,27 @@
 = AsciiDoc
 
-I've done a lot of writing in AsciiDoc for this portfolio, so I though I'd show you how the sausage is made. The intent of this page is to demonstrate my familiarity with this powerful syntax.
-
-NOTE: I've escaped some directives with a backslash and used literal delimiters in source code blocks to keep Antora from parsing the syntax.
+I've done a lot of writing in AsciiDoc for this portfolio, so I though I'd share a peak behind the curtain.
 
 == Principles > Docs-as-code
+This sample shows a high degree of modularity on the Docs-as-code page. This is admittedly overboard for a portfolio where content reuse opportunities aren't as necessary as in large documentation sites. It's mostly to serve as an example for how I approached topic typing for reuse. Notice the directory structure in the `include::` directives. They're grouped intuitively by theme. This approach helps with consistent categorizing of future content.
+
+I've also added brief comments to help when scanning the page. The cognitive load of a short comment is much lower than a messy `include::` directive. And, of course, a quick summary is more informative than a filename. It's important to consider maintainers in this way. I've often saved myself some heartburn with a clarifying internal note.
 
 [source.asciidoc]
 ----
-include::example$/docs-as-code.adoc[]
+include::example$/writing-samples/docs-as-code.adoc[]
 ----
 
 == Principles > Agile methodology
 
 [source,asciidoc]
 ----
-include::example$/agile.adoc[]
+include::example$/writing-samples/agile.adoc[]
 ----
 
 == Tools > Git
 
 [source,asciidoc]
 ----
-include::example$/git.adoc[]
+include::example$/writing-samples/git.adoc[]
 ----
